# RustENN

./: .gitignore  Cargo.toml  README.md  todo.md
data/nim/: stats.csv
data/nim/1/: params.csv
data/nim/stacks_2x2/t_1/: best_agent_games.txt  stats.csv
data/nim/stacks_2x2/t_1.1/: best_agent_games.txt  params.csv  stats.csv
data/nim/stacks_2x2/t_1.2/: best_agent_games.txt  stats.csv
data/nim/stacks_2x2/t_1x/: stats.csv
data/nim/stacks_2x2/t_1x.1/: stats.csv
data/nim/stacks_2x4/t_1/: best_agent_games.txt  stats.csv
data/nim/stacks_2x4/t_1.1/: best_agent_games.txt  stats.csv
data/nim/stacks_2x4/t_1.2/: best_agent_games.txt  stats.csv
data/nim/stacks_2x4/t_1x/: stats.csv
data/nim/stacks_2x4/t_1x.1/: params.csv  stats.csv
data/nim/stacks_2x4/t_2/: best_agent_games.txt  stats.csv
data/nim/stacks_2x4/t_2.1/: best_agent_games.txt  params.csv  stats.csv
data/nim/stacks_2x4/t_2.2/: best_agent_games.txt  stats.csv
data/nim/stacks_2x4/t_3/: best_agent_games.txt  stats.csv
data/nim/stacks_2x4/t_3.1/: best_agent_games.txt  stats.csv
data/nim/stacks_2x4/t_3.2/: best_agent_games.txt  params.csv  stats.csv
data/nim/stacks_2x8/: best_agent_games.txt  params.csv  stats.csv
data/test-1/: best_agent_tournament.csv  stats.csv
data/test-3/: best_agent_games_single.txt  params.csv
src/: lib.rs
src/enn/: mod.rs  population.rs
src/neat/: agent.rs  mod.rs  population.rs  utils.rs
src/nim/: dp.rs  mod.rs  nim.rs  nim2.rs
thesis/: background.tex  building-an-enn.tex  install-minted.ps1  ma.ps1  ma.tex  ma_fast.ps1  refs.bib  wrapping-up.tex
(+175 files in other folders)
