[package]
name = "rust_enn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.2"
indicatif = "0.17.8"
csv = "1.3.0"

bincode = "1.3.3"
serde = { version = "1.0.209", features = ["derive"] }
rayon ="1.10.0"